Feito o banner no fundo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
        <div class="center">
            <img src="./assets/logo.png" alt="logo">
        </div> <!-- center -->
+
+       <div class="container_banner">
+           <div class="center">
+               
+           </div><!-- center -->
+       </div><!-- container_banner -->
     </div><!-- header -->
 </body>
 </html>
