--- a/index.html
+++ b/index.html
@@ -15,7 +15,29 @@
 
        <div class="container_banner">
            <div class="center">
-               
+               <div class="form">
+                   <h2>Preencha o formulário</h2>
+                   <form>
+                       <div class="input_container">
+                           <span>Nome*</span>
+                           <input type="text" name="nome" required>
+                       </div><!-- input container -->
+                       <div class="input_container">
+                           <span>Email*</span>
+                           <input type="text" name="Email" required>
+                       </div><!-- input container -->
+                       <div class="input_container">
+                           <span>Telefone*</span>
+                           <input type="text" name="Telefone" required>
+                       </div><!-- input container -->
+
+                       <p class="warning">*Campos Obrigatórios</p>
+
+                       <div class="input_submit_container">
+                           <input type="submit" name="acao" value="Enviar">
+                       </div>
+                   </form>
+               </div><!-- form -->
            </div><!-- center -->
        </div><!-- container_banner -->
     </div><!-- header -->
