Finalizado o box do lado esquerdo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
 </head>
 <body>
     <div class="header">
-       <div class="center">
-           <img src="./assets/logo.png" alt="logo">
-       </div> <!-- center -->
+        <div class="center">
+            <img src="./assets/logo.png" alt="logo">
+        </div> <!-- center -->
+    </div><!-- header -->
 
        <div class="container_banner">
            <div class="center">
+
+            <div class="container_list">
+                <ul>
+                    <li>Lorem ipsum dolor sit amet </li>
+                    <li>Lorem ipsum dolor sit amet </li>
+                    <li>Lorem ipsum dolor sit amet </li>
+                    <li>Lorem ipsum dolor sit amet </li>
+                </ul>
+            </div><!-- container list -->
+
                <div class="form">
                    <h2>Preencha o formulário</h2>
                    <form>
@@ -40,6 +51,12 @@
                </div><!-- form -->
            </div><!-- center -->
        </div><!-- container_banner -->
-    </div><!-- header -->
-</body>
+
+       <div class="container_conteudo">
+           <div class="center">
+               <h2>Lorem Ipsum</h2>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, nobis. Illum labore mollitia laboriosam itaque quas temporibus aut quidem modi sint magnam. Dicta aliquam ipsum eos aspernatur autem rem odit?</p>
+           </div><!-- center -->
+        </div><!-- container conteudo -->
+    </body>
 </html>
