--- a/index.html
+++ b/index.html
@@ -51,43 +51,50 @@
                </div><!-- form -->
            </div><!-- center -->
        </div><!-- container_banner -->
-
+       
+       <div class="section_1">
+           <div class="center">
+               <h3>Aprenda com quem esta no mercado</h3>
+               <div class="container_section">
+                   <div class="container_single">
+                       <div><img src="./assets/icon.png" alt="icon"></div>
+                       <div class="text_container_single">
+                           <h3>Lorem Ipsum</h3>
+                           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae. </p>
+                       </div><!-- text container single -->
+                   </div><!-- container single -->
+                   <div class="container_single">
+                       <div><img src="./assets/icon.png" alt="icon"></div>
+                       <div class="text_container_single">
+                           <h3>Lorem Ipsum</h3>
+                           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae. </p>
+                       </div><!-- text container single -->
+                   </div><!-- container single -->
+                   <div class="container_single">
+                       <div><img src="./assets/icon.png" alt="icon"></div>
+                       <div class="text_container_single">
+                           <h3>Lorem Ipsum</h3>
+                           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae.</p>
+                       </div><!-- text container single -->
+                   </div><!-- container single -->
+               </div><!-- container section -->
+           </div><!-- center -->
+           <div class="arrow"></div><!-- arrow -->
+       </div><!-- section 1 -->
+       <div class="clear"></div>
        <div class="container_conteudo">
            <div class="center">
                <h2>Lorem Ipsum</h2>
-               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, nobis. Illum labore mollitia laboriosam itaque quas temporibus aut quidem modi sint magnam. Dicta aliquam ipsum eos aspernatur autem rem odit? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus quaerat eveniet nisi reprehenderit? Molestias porro, culpa rerum laborum quidem quas vero iste tempore neque iure, harum sapiente voluptates maxime ea?</p>
+               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut, nobis. Illum labore mollitia laboriosam itaque quas temporibus aut quidem modi sint magnam. Dicta aliquam ipsum eos aspernatur autem rem odit?</p>
            </div><!-- center -->
 
-           <div class="arrow"></div><!-- arrow -->
+           
         </div><!-- container conteudo -->
 
-        <div class="section_1">
-            <div class="center">
-                <h2>Aprenda com quem esta no mercado</h2>
-                <div class="container_section">
-                    <div class="container_single">
-                        <div><img src="./assets/icon.png" alt="icon"></div>
-                        <div class="text_container_single">
-                            <h2>Lorem Ipsum</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eligendi illum ea beatae necessitatibus sunt totam commodi? Cupiditate, praesentium voluptatem? Non culpa amet ex perferendis itaque ut doloremque omnis rem.</p>
-                        </div><!-- text container single -->
-                    </div><!-- container single -->
-                    <div class="container_single">
-                        <div><img src="./assets/icon.png" alt="icon"></div>
-                        <div class="text_container_single">
-                            <h2>Lorem Ipsum</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eligendi illum ea beatae necessitatibus sunt totam commodi? Cupiditate, praesentium voluptatem? Non culpa amet ex perferendis itaque ut doloremque omnis rem.</p>
-                        </div><!-- text container single -->
-                    </div><!-- container single -->
-                    <div class="container_single">
-                        <div><img src="./assets/icon.png" alt="icon"></div>
-                        <div class="text_container_single">
-                            <h2>Lorem Ipsum</h2>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Et ex fuga, eligendi nisi ducimus iste assumenda atque, quidem delectus illo hic porro maxime laborum soluta aliquam sit quaerat repudiandae recusandae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis eligendi illum ea beatae necessitatibus sunt totam commodi? Cupiditate, praesentium voluptatem? Non culpa amet ex perferendis itaque ut doloremque omnis rem.</p>
-                        </div><!-- text container single -->
-                    </div><!-- container single -->
-                </div><!-- container section -->
-            </div><!-- center -->
-        </div><!-- section 1 -->
+        <div class="clear"></div><!-- clear -->
+        <div class="footer">
+            <p>Todos os direitos reservados</p>
+            <p>Av lorem ipsum, silor domor 211 - Votorantim SP</p>
+        </div><!-- footer -->
     </body>
 </html>
